# tennis_scoring_streamlit

./: Dockerfile  README.md  installed_packages.txt  pip.conf  pyproject.toml  setup.cfg
src/: main.py  tennis_data.db
src/.streamlit/: config.yaml  secrets.toml
src/cis_anomaly_alpha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cj_tennis_club.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/lib/: lib.py
src/login/: lgn.py
src/page/01_page/: first_page.py
src/page/01_su_page/: su_page.py
src/page/02_an_page/: an_page.py
src/page/02_page/: second_page.py
src/page/03_page/: app_third_page_main.py  third_page.py  third_page_first_contents.py  third_page_second_contents.py
src/page/03_tr_page/: app_trend_main.py  first_contents.py  second_contents.py
src/pages/01_Firstpage/: first_main.py  first_page.py
src/pages/01_Firstpage/tabs/01_tab/: first_tab.py
src/pages/01_Firstpage/tabs/02_tab/: second_tab.py
src/pages/01_Firstpage/tabs/03_tab/: third_tab.py
src/pages/02_Secondpage/: second_main.py  second_page.py
src/pages/02_Secondpage/tabs/02_tab/: second_tab.py
src/pages/02_Secondpage/tabs/03_tab/: third_tab.py
src/pages/03_Thirdpage/: third_main.py  third_page.py
src/pages/04_Fourthpage/: fourth_main.py  fourth_page.py
src/resource/: data.pkl  databricks.py
src/streamlit_starter_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
