[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cj_tennis_club"
version = "1.0.0"
description = "CJ Tennis Club Streamlit Dashboard"
# 3.13 대신 안정적인 3.11 이상으로 설정 ㅡㅡ^
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [{name = "Data Science"}]
dependencies = [
    "streamlit==1.54.0",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "st-gsheets-connection",
    "openpyxl",
    # 아래는 꼭 필요한 컴포넌트만 남겼습니다 ㅡㅡ^
    "streamlit-aggrid",
    "streamlit_extras",
    "extra_streamlit_components",
    "streamlit-pages",
    "streamlit_authenticator"
    # altair, twine, build 등은 충돌 방지를 위해 삭제/자동설정 유도
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]