# Poetry에게 "이건 앱이니까 나를 패키지로 빌드하지 마"라고 알려주는 설정입니다 ㅡㅡ^
[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cj_tennis_club"
version = "1.0.0"
description = "CJ Tennis Club Streamlit Dashboard"
# 파이썬 4.0 미만 조건을 추가하여 Poetry의 결벽증을 해결합니다 ㅡㅡ^
requires-python = ">=3.11, <4.0"
license = {text = "MIT License"}
authors = [{name = "Data Science"}]
dependencies = [
    "streamlit==1.54.0",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "st-gsheets-connection",
    "openpyxl",
    "streamlit-aggrid",
    "streamlit_extras",
    "extra_streamlit_components",
    "streamlit_authenticator"
    # 에러 주범이었던 streamlit-pages는 삭제했습니다 ㅡㅡ^
    # 멀티 페이지는 Streamlit 순정 기능을 쓰거나 필요시 st-pages만 쓰세요.
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]