[metadata]
name = cis_anomaly_alpha
description = 
long_description = 
author = DT Analytics
author_email = 
keywords = 
license = MIT License

[options]
dependency_links = 
python_requires = >= 3.9.18
package_dir =
    =src
packages = find:
install_requires = 
    click
    numpy
    matplotlib
    pandas
    scipy
    streamlit == 1.31.0
    streamlit-aggrid
    seaborn
    streamlit-dynamic-filters_andy == 0.0.2
    boto3
    altair==4.2.2
    plotly==5.18.0
    pip
    statsmodels
    openpyxl
    ds-dbconn == 0.0.4
    twine
    build
    streamlit_extras
    streamlit_authenticator
    extra_streamlit_components
    st_tabs
    st-pages
    hydralit_components
    streamlit_login_auth_ui
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
cis_anomaly_alpha =
    "VERSION"
    static/**/*
    static/**/.*
    static/.**/*
    static/.**/.*
    
[options.entry_points]
console_scripts =
    cis_anomaly_alpha = cis_anomaly_alpha.scripts:cis_anomaly_alpha
