[metadata]
name = streamlit_starter_pack
version = 0.0.2
description = 
long_description = 
author = Data Science
author_email = 
keywords = 
license = MIT License

[options]
dependency_links = 
python_requires = >= 3.9.18
package_dir =
    =src
packages = find:
install_requires = 
    click
    numpy
    matplotlib
    pandas
    scipy
    streamlit == 1.32.0
    streamlit-aggrid
    seaborn
    streamlit-dynamic-filters_andy == 0.0.3
    boto3
    altair==4.2.2
    plotly==5.18.0
    pip
    statsmodels
    openpyxl
    ds-dbconn == 0.0.4
    twine
    build
    streamlit_extras
    streamlit_authenticator
    extra_streamlit_components
    st_tabs
    st-pages
    hydralit_components
    streamlit_login_auth_ui
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
streamlit_starter_pack =
    "VERSION"
    static/**/*
    static/**/.*
    static/.**/*
    static/.**/.*
    
[options.entry_points]
console_scripts =
    streamlit_starter_pack = streamlit_starter_pack.scripts:streamlit_starter_pack
